--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
 zeit.content.rawxml changes
 ===========================
 
+0.2 (unreleased)
+----------------
+
 0.1 (2008-08-28)
-++++++++++++++++
+----------------
 
 - Erstes release.
-
