--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.rawxml changes
 ===========================
 
+0.3 (unreleased)
+----------------
+
 0.2 (2008-09-16)
 ----------------
 
