--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
-0.3 (unreleased)
-----------------
+0.2.1 (2008-11-20)
+------------------
+
+- Kein Test-Extra
+- Extra SecurityPolicy
+
 
 0.2 (2008-09-16)
 ----------------
