--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.rawxml changes
 ===========================
 
+0.2.2 (unreleased)
+------------------
+
 0.2.1 (2008-11-20)
 ------------------
 
