--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.rawxml changes
 0.2.2 (unreleased)
 ------------------
 
+- Icon wird in der richtigen Größe dargestellt (18x18).
+
 0.2.1 (2008-11-20)
 ------------------
 
