- Default-View hinzugefÃ¼gt (Bug #4463).

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ zeit.content.rawxml changes
 ------------------
 
 - Icon wird in der richtigen Größe dargestellt (18x18).
+- Default-View hinzugefügt (Bug #4463).
 
 0.2.1 (2008-11-20)
 ------------------
