--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.rawxml changes
 ===========================
 
+0.4 (unreleased)
+----------------
+
 0.3 (2008-11-25)
 ----------------
 
