--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.3.4 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.3.3 (2009-08-18)
 ------------------
 
