- Fix tests after decentral syndication was disabled by default (##6878).

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.rawxml changes
 0.3.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix tests after decentral syndication was disabled by default (##6878).
 
 
 0.3.3 (2009-08-18)
