Back to development: 0.3.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.3.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.3.4 (2010-03-10)
 ------------------
 
