--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.3.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.3.5 (2010-05-03)
 ------------------
 
