--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.rawxml changes
 0.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Update XMLReferenceUpdater API (VIV-629).
 
 
 0.4.1 (2014-01-07)
