--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.4.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.4.2 (2014-12-17)
 ------------------
 
