Re DEV-765: Register RawXML as a CMS content type
Now DynamicFolders can reference files marked with type rawxml
(otherwise they are rejected by the cmsContentSource)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.rawxml changes
 0.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Register RawXML as a CMS content type.
 
 
 0.4.2 (2014-12-17)
