--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.4.4 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.4.3 (2015-06-09)
 ------------------
 
