--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.rawxml changes
 ===========================
 
-0.4.4 (unreleased)
+0.5.0 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- ZON-3393: Add marker interface ``IUserDashboard``.
 
 
 0.4.3 (2015-06-09)
