--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.5.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.5.0 (2016-12-06)
 ------------------
 
