--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.rawxml changes
 0.5.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- ZON-3393: Fix interface declaration to not exclude inherited interfaces
 
 
 0.5.0 (2016-12-06)
