--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.rawxml changes
 ===========================
 
+0.5.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.5.1 (2016-12-15)
 ------------------
 
